--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import "https://fonts.googleapis.com/css?family=Raleway:100,300,600";
+@import "https://fonts.googleapis.com/css?family=Alex+Brush";
 
 /*******	Body	*******/
 * {
