--- a/css/article.css
+++ b/css/article.css
@@ -30,6 +30,14 @@ h1 {
 	float: left;
 }
 
+@media (max-width:1200px) {
+  h1 {
+		margin-top:0;
+    float:none;
+    padding: 20px;
+	}
+}
+
 h2 {
 	font-size: 125%;
 	margin-top: -1em;
@@ -54,6 +62,12 @@ h4, h5, h6 {
 .bordure_transparent {
 	margin-bottom: 5vh;
 	border-bottom: 1px solid rgb(0,0,0,0);
+}
+
+@media (max-width:740px) {
+  .bordure {
+    margin-top: 5vh;
+  }
 }
 
 
@@ -98,20 +112,39 @@ h4, h5, h6 {
 	background-size: cover;
 }
 
+@media (max-width:1200px) {
+  	.banner {
+      height: 65vh;
+    }
+}
+
+@media (orientation: landscape) {
+  .banner {
+    height: 100vh;
+  }
+}
+
 .logo {
 	margin-top: 5vh;
 	width: 15%;
 	float:left;
 }
 
+@media (max-width:1200px) {
+  .logo {
+    width: 200px;
+    float:none;
+  }
+}
+
 /*******	Navigation	*******/
 .nav {
-  height: 61px;
-  width: 100%;
   background-color: #4d4d4d;
-  position: relative;
-	z-index: 100;
-	text-align: center;
+  padding: 0;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  text-align: center;
 }
 
 .nav-btn {
@@ -138,141 +171,24 @@ a:hover {
   display: none;
 }
 
-.sticky {
-    top: 0;
-		width: 100%;
-    position: fixed;
-		text-align: center;
-		box-shadow: 0px 1px 15px #111;
+@media (min-width:620px) and (max-width:1200px) {
+  .nav a {
+    width:19vw;
+  }
 }
 
-/*******	Flex	*******/
-.flex {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.flex article {
-	width: 100%;
-  margin-bottom: 5vh;
-}
-
-/*******	Inner	*******/
-.inner {
-	max-width: 45vw;
-	margin: auto;
-	padding: 6vh 0;
-}
-
-.inner p {
-  text-indent: 5vh;
-}
-
-.inner header h2,
-.inner header h3  {
-  font-size: 140%;
-	text-align: center;
-	margin: 5vh;
-}
-
-.inner article h3 {
-	text-align: left;
-  margin: 3vh;
-}
-
-.inner header h2 {
-	font-size: 2.75em;
-	margin: 0 0 .5em 0;
-}
-
-/*******	Image	*******/
-.image {
-  float: left;
-  width: 50%;
-  padding: 0 3vh 0 0;
-}
-
-.image img {
-	border-radius: 10px;
-  width: 100%;
-}
-
-/*******	Button *******/
-.button {
-	transition: 0.2s ease-in-out, color 0.2s ease-in-out;
-	display: inline-block;
-	font-weight: 600;
-	line-height: 2.95em;
-	padding: 0 1.5em;
-	text-decoration: none;
-	color: rgb(234, 234, 233);
-}
-
-.button:hover {
-	background-color: rgb(116, 116, 100);
-}
-
-.button.special {
-	background-color: rgb(145, 167, 162);
-}
-
-.button.special:hover {
-	background-color: rgb(116, 116, 100);
-}
-
-
-/* Tableau */
-table {
-	color:white;
-	text-align:justify;
-	margin: auto;
-}
-
-table th {
-	width: 7em;
-	text-decoration:underline;
-}
-
-/* Footer */
-footer table {
-	background-color:#333;
-	border-color:black;
-	border-width: small;
-	padding:0;
-	text-align: center;
-	width: 100%;
-}
-
-/*******	Media Query	*******/
-@media (max-width:480px) {
-	/*	Banner	*/
-	.banner {
-		background-image: none;
-		background-color: rgb(234, 234, 233);
-		height: 65vh;
-		font-size: 60%;
-	}
-
-	h1 {
-		margin-top:5vh;
-	}
-
-	.logo {
-		margin-top: 5vh;
-		width: 70%;
-	}
-
-	/*	Navigation	*/
+@media (max-width:620px) {
 	.nav {
 		  height: 50px;
 			text-align: left;
 	}
+
 	.nav-btn {
 	  display: inline-block;
 	}
 
 	.nav-links {
-				text-align: center;
+		text-align: center;
 	}
 
 	label {
@@ -300,7 +216,7 @@ footer table {
 	  background-color: #333;
 	  height: 0px;
 	  transition: all 0.3s ease-in;
-	  overflow-y: hidden;
+     overflow-y: hidden;
 	  top: 50px;
 	}
 
@@ -309,65 +225,135 @@ footer table {
 	  width: 100%;
 	}
 
-	#nav-check:not(:checked) {
-	  height: 0px;
-	}
-
 	#nav-check:checked ~ .nav-links {
-	  height: calc(41.5vh);
+	  height: calc(307px);
 	  overflow-y: auto;
 	}
-
-	/*	Inner	*/
-	.inner {
-		max-width: 85%;
-		text-align: center;
-	}
-
-	.button {
-		padding: 0;
-		width: 100%;
-	}
-
-	.image img {
-		width: 100%;
-		text-align: center;
-	}
 }
 
-@media screen and (max-width: 736px) {
-	.inner header {
-		margin-bottom: 2em;
-	}
-
-	.inner header h2 {
-		font-size: 2em;
-	}
-
-	.inner header p {
-			font-size: .9em;
-	}
+.sticky {
+    top: 0;
+		width: 100%;
+    position: fixed;
+		text-align: center;
+		box-shadow: 0px 1px 15px #111;
 }
 
-@media screen and (max-width: 980px) {
+/*******	Flex	*******/
+.flex {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.flex article {
+	width: 100%;
+  margin-bottom: 5vh;
+}
+
+@media (min-width:620px) and (max-width:1200px) {
+  .flex article {
+    width: 45%;
+    margin-bottom: 3em;
+  }
+}
+
+
+@media (max-width: 620px) {
 	.flex article {
 		width: 100%;
 		margin-bottom: 3em;
 	}
+}
 
-	.inner {
-		padding: 2em 0;
+/*******	Inner	*******/
+.inner {
+	max-width: 60vw;
+	margin: auto;
+	padding: 6vh 0;
+}
+
+.inner p {
+  text-indent: 5vh;
+}
+
+.inner header h2,
+.inner header h3  {
+  font-size: 140%;
+	text-align: center;
+	margin: 5vh;
+}
+
+.inner article h3 {
+	text-align: left;
+  margin: 3vh;
+}
+
+.inner header h2 {
+	font-size: 2.75em;
+	margin: 0 0 .5em 0;
+}
+
+@media (min-width:620px) and (max-width:1200px) {
+  .inner {
+		max-width: 90%;
 	}
+}
 
-	.image img {
-		width: 80%;
-		margin: auto;
+@media (max-width:620px) {
+	.inner {
+		max-width: 85%;
+	}
+}
+
+/*******	Image	*******/
+.image {
+  float: left;
+  width: 50%;
+  padding: 0 3vh 0 0;
+}
+
+.image img {
+	border-radius: 10px;
+  width: 100%;
+}
+
+@media (min-width:620px) and (max-width:740px) {
+  .image img {
+  	width: 90%;
+    margin: auto 2vh;
+  }
+}
+
+@media (max-width:620px) {
+  .image {
+    float:none;
+    width: 100%;
+  }
+
+  .image img {
 		text-align: center;
 	}
 }
 
-@media screen and (max-width: 1280px) {
-	.inner {
-		max-width: 90%;
-	}
+
+/* Tableau */
+table {
+	color:white;
+	text-align:justify;
+	margin: auto;
+}
+
+table th {
+	width: 7em;
+	text-decoration:underline;
+}
+
+/* Footer */
+footer table {
+	background-color:#333;
+	border-color:black;
+	border-width: small;
+	padding:0;
+	text-align: center;
+	width: 100%;
 }
