--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body {
 	height: 100%;
 	font-size: 110%;
 	font-family: "Raleway", Arial, Helvetica, sans-serif;
-	background-color: rgb(234, 234, 233);
+  background-color: rgb(234, 234, 233);
 }
 
 /******* Titres *******/
@@ -27,6 +27,12 @@ h1 {
 	margin-top: 10vh;
 	font-family: 'Alex Brush';
 	font-size: 400%;
+}
+
+@media (max-width:1200px) {
+  h1 {
+		margin-top:5vh;
+	}
 }
 
 h2 {
@@ -55,6 +61,12 @@ h4, h5, h6 {
 	border-bottom: 1px solid rgb(0,0,0,0);
 }
 
+@media (max-width:740px) {
+  .bordure {
+    margin-top: 5vh;
+  }
+}
+
 /******* Banner *******/
 .banner {
 	background-image: url("../imgs/slide_0.1.jpg");
@@ -66,19 +78,50 @@ h4, h5, h6 {
 	background-size: cover;
 }
 
+@media (max-width:1200px) {
+  	.banner {
+      height: 65vh;
+      background-position: right;
+    }
+}
+
+@media (orientation: landscape) and (max-width:max-height) {
+  .banner {
+    height: 100vh;
+  }
+}
+
 .logo {
 	margin-top: 5vh;
 	width: 25%;
 }
 
+@media (min-width:530px) and (max-width:1200px) {
+  .logo {
+    width: 300px;
+  }
+}
+
+@media (orientation: landscape) and (max-width:1200px){
+  .logo {
+    width:200px;
+  }
+}
+
+@media (max-width:530px) {
+	.logo {
+		width: 200px;
+	}
+}
+
 /*******	Navigation	*******/
 .nav {
-  height: 61px;
-  width: 100%;
   background-color: #4d4d4d;
-  position: relative;
-	z-index: 100;
-	text-align: center;
+  padding: 0;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  text-align: center;
 }
 
 .nav-btn {
@@ -87,10 +130,9 @@ h4, h5, h6 {
 
 .nav-links {
   display: inline;
-
 }
 
-a {
+ a {
 	width: 10vw;
   display: inline-block;
   padding: 13px 10px 13px 10px;
@@ -106,134 +148,24 @@ a:hover {
   display: none;
 }
 
-.sticky {
-    top: 0;
-		width: 100%;
-    position: fixed;
-		text-align: center;
-		box-shadow: 0px 1px 15px #111;
+@media (min-width:530px) and (max-width:1200px) {
+  .nav a {
+    width:19vw;
+  }
 }
 
-/*******	Flex	*******/
-.flex {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
-
-.flex article {
-	width: 45%;
-}
-
-/*******	Inner	*******/
-.inner {
-	max-width: 75vw;
-	margin: 0vh auto;
-	padding: 6vh 0;
-}
-
-.inner header h2,
-.inner header p  {
-	text-align: center;
-	margin: 0 0 8vh 0;
-}
-
-.inner article h3 {
-	text-align: left;
-}
-
-.inner header h2 {
-	font-size: 2.75em;
-	margin: 0 0 .5em 0;
-}
-
-/*******	Image	*******/
-.image {
-	display: inline-block;
-	display: block;
-	margin: 0 0 2em 0;
-}
-
-.image img {
-	border-radius: 10px;
-	width: 100%;
-	text-align: center;
-}
-
-/*******	Button *******/
-.button {
-	transition: 0.2s ease-in-out, color 0.2s ease-in-out;
-	display: inline-block;
-	font-weight: 600;
-	line-height: 2.95em;
-	padding: 0 1.5em;
-	text-decoration: none;
-	color: rgb(234, 234, 233);
-}
-
-.button:hover {
-	background-color: rgb(116, 116, 100);
-}
-
-.button.special {
-	background-color: rgb(145, 167, 162);
-}
-
-.button.special:hover {
-	background-color: rgb(116, 116, 100);
-}
-
-/******* Tableau *******/
-table {
-	color:white;
-	text-align:justify;
-	margin: auto;
-}
-
-table th {
-	width: 7em;
-	text-decoration:underline;
-}
-
-/******* Footer *******/
-footer table {
-	background-color:#333;
-	border-color:black;
-	padding:0;
-	text-align: center;
-	width: 100%;
-}
-
-/*******	Media Query	*******/
-@media (max-width:480px) {
-	/*	Banner	*/
-	.banner {
-		background-image: none;
-		background-color: rgb(234, 234, 233);
-		height: 65vh;
-		font-size: 60%;
-	}
-
-	h1 {
-		margin-top:5vh;
-	}
-
-	.logo {
-		margin-top: 5vh;
-		width: 70%;
-	}
-
-	/*	Navigation	*/
+@media (max-width:530px) {
 	.nav {
 		  height: 50px;
 			text-align: left;
 	}
+
 	.nav-btn {
 	  display: inline-block;
 	}
 
 	.nav-links {
-				text-align: center;
+		text-align: center;
 	}
 
 	label {
@@ -270,65 +202,209 @@ footer table {
 	  width: 100%;
 	}
 
-	#nav-check:not(:checked) {
-	  height: 0px;
-	}
-
 	#nav-check:checked ~ .nav-links {
-	  height: calc(41.5vh);
+	  height: calc(307px);
 	  overflow-y: auto;
 	}
-
-	/*	Inner	*/
-	.inner {
-		max-width: 85%;
-		text-align: center;
-	}
-
-	.button {
-		padding: 0;
-		width: 100%;
-	}
-
-	.image img {
-		width: 100%;
-		text-align: center;
-	}
 }
 
-@media screen and (max-width: 736px) {
-	.inner header {
-		margin-bottom: 2em;
-	}
-
-	.inner header h2 {
-		font-size: 2em;
-	}
-
-	.inner header p {
-			font-size: .9em;
-	}
+.sticky {
+    top: 0;
+		width: 100%;
+    position: fixed;
+		text-align: center;
+		box-shadow: 0px 1px 15px #111;
 }
 
-@media screen and (max-width: 980px) {
+/*******	Flex	*******/
+.flex {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.flex article {
+	width: 45%;
+}
+
+@media (min-width:740px) and (max-width:1200px) {
+  .flex article {
+    width: 45%;
+    margin-bottom: 3em;
+  }
+}
+
+@media (min-width:530px) and (max-width:740px) {
+  .flex article {
+    width: 85%;
+    margin-bottom: 3em;
+    margin:auto;
+  }
+}
+
+@media (max-width: 530px) {
 	.flex article {
 		width: 100%;
 		margin-bottom: 3em;
 	}
+}
 
-	.inner {
-		padding: 2em 0;
+/*******	Inner	*******/
+.inner {
+	max-width: 65vw;
+	margin: 0vh auto;
+	padding: 6vh 0;
+}
+
+.inner header h2,
+.inner header p  {
+	text-align: center;
+	margin: 0 0 8vh 0;
+}
+
+.inner article h3 {
+	text-align: left;
+}
+
+.inner header h2 {
+	font-size: 2.75em;
+	margin: 0 0 .5em 0;
+}
+
+@media (min-width:740px) and (max-width:1200px) {
+  .inner {
+		max-width: 90%;
 	}
+}
 
-	.image img {
-		width: 80%;
-		margin: auto;
+@media (min-width:530px) and (max-width:740px) {
+  .inner {
+		max-width: 100%;
+	}
+}
+
+@media (max-width:530px) {
+	.inner {
+		max-width: 85%;
+	}
+}
+
+/*******	Image	*******/
+.image {
+	display: block;
+	margin: 0 0 2em 0;
+}
+
+.image img {
+	border-radius: 10px;
+	width: 100%;
+	text-align: center;
+}
+
+@media (min-width:530px) and (max-width:740px) {
+  .image img {
+  	width: 90%;
+    margin: 5vh;
+  }
+}
+
+@media (max-width:530px) {
+  .image img {
 		text-align: center;
 	}
 }
 
-@media screen and (max-width: 1280px) {
-	.inner {
-		max-width: 90%;
+/*******	Button *******/
+.button {
+	transition: 0.2s ease-in-out, color 0.2s ease-in-out;
+	display: inline-block;
+	font-weight: 600;
+	line-height: 2.95em;
+	padding: 0 1.5em;
+	text-decoration: none;
+	color: rgb(234, 234, 233);
+  background-color: rgb(145, 167, 162);
+  text-align: center;
+}
+
+.button:hover {
+	background-color: rgb(116, 116, 100);
+}
+
+@media (min-width:530px) and (max-width:740px) {
+  .button {
+    width:20vw;
+    margin-bottom: 5vh;
+  }
+}
+
+@media (max-width:530px) {
+	.button {
+		padding: 0;
+		width: 100%;
 	}
+}
+
+/******* Footer *******/
+footer {
+  width: 100%;
+  height: 8vh;
+}
+
+footer p {
+  padding-left: 10%;
+  color: white;
+  font-size: 0.7em;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+}
+
+footer a {
+ float: left;
+ text-decoration: none;
+ color: white;
+ text-align: center;
+ font-weight: bold;
+}
+
+.copyright {
+  width: 50%;
+  height:100%;
+  float: left;
+  background-color: #888;
+}
+
+.social {
+  width: 50%;
+  height:100%;
+  float: right;
+  background-color: #333;
+}
+
+.linked {
+  background-color: #1E83AE;
+  font-size:1.2em;
+  width: 20%;
+  height: 100%;
+}
+
+.face {
+  background-color: #3D5B94;
+  font-size: 1.2em;
+  width: 20%;
+  height: 100%;
+}
+
+.tweet {
+  background-color: #3DACDD;
+  font-size: 1.2em;
+  width: 20%;
+  height: 100%;
+}
+
+.support {
+  background-color: #6dcd9a;
+  font-size: 0.8em;
+  width: 40%;
+  height: 100%;
 }
