--- a/css/article.css
+++ b/css/article.css
@@ -1,33 +1,10 @@
-@charset "UTF-8";
-@import "https://fonts.googleapis.com/css?family=Raleway:100,300,600";
-@import "https://fonts.googleapis.com/css?family=Alex+Brush";
-
-/*******	Body	*******/
-* {
-  box-sizing: border-box;
-}
-
-body {
-	line-height: 200%;
-	height: 100%;
-	font-size: 110%;
-	font-family: "Raleway", Arial, Helvetica, sans-serif;
-	background-color: rgb(234, 234, 233);
-}
-
 /******* Titres *******/
-p {
-	color: rgb(77, 87, 77);
-	position: relative;
-	margin: 2vh 0 2vh 0;
-	text-align: justify;
-}
-
 h1 {
-	padding: 9%;
+	padding: 8%;
 	font-family: 'Alex Brush';
 	font-size: 400%;
 	float: left;
+  margin-top: 2%;
 }
 
 @media (max-width:1200px) {
@@ -38,38 +15,11 @@ h1 {
 	}
 }
 
-h2 {
-	font-size: 125%;
-	margin-top: -1em;
-}
-
-h3 {
-	font-size: 110%;
-	margin-top: -0.8em;
-}
-
-h4, h5, h6 {
-	font-size: 90%;
-	margin-top: -0.6em;
-}
-
 /*******	Bordure	*******/
 .bordure {
 	margin: 5vh 0 5vh 0;
 	border-bottom: 1px solid #333;
 }
-
-.bordure_transparent {
-	margin-bottom: 5vh;
-	border-bottom: 1px solid rgb(0,0,0,0);
-}
-
-@media (max-width:740px) {
-  .bordure {
-    margin-top: 5vh;
-  }
-}
-
 
 /******* Banner *******/
 #astronomie {
@@ -112,12 +62,6 @@ h4, h5, h6 {
 	background-size: cover;
 }
 
-@media (max-width:1200px) {
-  	.banner {
-      height: 65vh;
-    }
-}
-
 @media (orientation: landscape) {
   .banner {
     height: 100vh;
@@ -137,108 +81,6 @@ h4, h5, h6 {
   }
 }
 
-/*******	Navigation	*******/
-.nav {
-  background-color: #4d4d4d;
-  padding: 0;
-  position: sticky;
-  top: 0;
-  z-index: 10;
-  text-align: center;
-}
-
-.nav-btn {
-  display: none;
-}
-
-.nav-links {
-  display: inline;
-}
-
-a {
-	width: 10vw;
-  display: inline-block;
-  padding: 13px 10px 13px 10px;
-  text-decoration: none;
-  color: #efefef;
-}
-
-a:hover {
-  background-color: rgba(0, 0, 0, 0.3);
-}
-
-#nav-check {
-  display: none;
-}
-
-@media (min-width:620px) and (max-width:1200px) {
-  .nav a {
-    width:19vw;
-  }
-}
-
-@media (max-width:620px) {
-	.nav {
-		  height: 50px;
-			text-align: left;
-	}
-
-	.nav-btn {
-	  display: inline-block;
-	}
-
-	.nav-links {
-		text-align: center;
-	}
-
-	label {
-	  display: inline-block;
-	  width: 50px;
-	  height: 50px;
-	  padding: 13px;
-	}
-
-	label:hover {
-	  background-color: rgba(0, 0, 0, 0.3);
-	}
-
-	span {
-	  display: block;
-	  width: 25px;
-	  height: 10px;
-	  border-top: 2px solid #eee;
-	}
-
-	.nav-links {
-	  position: absolute;
-	  display: block;
-	  width: 100%;
-	  background-color: #333;
-	  height: 0px;
-	  transition: all 0.3s ease-in;
-     overflow-y: hidden;
-	  top: 50px;
-	}
-
-	a {
-	  display: block;
-	  width: 100%;
-	}
-
-	#nav-check:checked ~ .nav-links {
-	  height: calc(307px);
-	  overflow-y: auto;
-	}
-}
-
-.sticky {
-    top: 0;
-		width: 100%;
-    position: fixed;
-		text-align: center;
-		box-shadow: 0px 1px 15px #111;
-}
-
 /*******	Flex	*******/
 .flex {
 	display: flex;
@@ -256,7 +98,6 @@ a:hover {
     margin-bottom: 3em;
   }
 }
-
 
 @media (max-width: 620px) {
 	.flex article {
@@ -305,6 +146,34 @@ a:hover {
 	}
 }
 
+
+/*******	Tableau *******/
+table {
+  border: medium solid #6495ed;
+  border-collapse: collapse;
+  width: 50%;
+}
+th {
+  text-align: center;
+  border: thin solid #6495ed;
+  width: 50%;
+  padding: 5px;
+  background-color: #D0E3FA;
+}
+td {
+  border: thin solid #6495ed;
+  width: 50%;
+  padding: 5px;
+  text-align: center;
+  background-color: #ffffff;
+}
+
+iframe {
+	width:100%;
+	height:315px;
+	border-radius: 15px;
+}
+
 /*******	Image	*******/
 .image {
   float: left;
@@ -335,25 +204,25 @@ a:hover {
 	}
 }
 
-
-/* Tableau */
-table {
-	color:white;
-	text-align:justify;
-	margin: auto;
+/******* Footer *******/
+footer .foot{
+  width: 100%;
+  padding:2vh;
+  background-color: #333;
+  float:left;
+  text-align: center;
 }
 
-table th {
-	width: 7em;
-	text-decoration:underline;
+footer p {
+  color: #333;
+  font-size: 0.7em;
+  letter-spacing: 1px;
+  text-align: center;
+  margin-top: 13vh;
 }
 
-/* Footer */
-footer table {
-	background-color:#333;
-	border-color:black;
-	border-width: small;
-	padding:0;
-	text-align: center;
-	width: 100%;
+footer h1 {
+  text-align:center;
+  width:100%;
+  padding:0;
 }
